<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.fragment.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        app:titleTextColor="@color/black"/>

    <EditText
        android:id="@+id/search_entry"
        android:layout_width="@dimen/size_300"
        android:background="@drawable/entry_bg"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_30"
        android:textColor="@color/orange"
        android:textSize="@dimen/text_size_15"
        android:fontFamily="@font/quicksand"
        android:paddingLeft="@dimen/margin_10"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="@dimen/size_150"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/search"
        android:textAllCaps="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:indeterminateTint="@color/orange"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>